@@ -2,4 +2,5 @@ package edu.cmpe277.teamgoat.photoapp;
 
 public class LolGlobalVariables {
     public static String facebookAccessToken;
+    public static String currentlyLoggedInFacebookUserId;
 }
