@@ -3,3 +3,4 @@
 -show description of image when showing an image wth its comments
 -do server side validation of users being allowed to view images, so that we dont end
  up with an app like photofucket aimed at exploiting our lame engineering.
+- allow user to delete an image, if they own it, by long clicking it in the album image grid view
